--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.errorlist {
+  @apply bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2;
+}
