--- a/apps/templates/todo/index.html
+++ b/apps/templates/todo/index.html
@@ -4,28 +4,7 @@
   <h1 class="text-2xl font-bold">TODO App</h1>
   <ul id="item-list">
     {% for it in items %}
-      <li class="flex items-center border-b border-gray-200 py-2" id="item-{{ it.id }}">
-        <input
-          type="checkbox" 
-          class="mr-2"
-          id="myCheckbox-{{ it.id }}"
-          hx-patch="/todos/{{ it.id }}/"
-          hx-swap="outerHTML"
-          hx-target="#item-{{ it.id }}"
-          {% if it.completed %}checked{% endif %}
-        > 
-          <div class="flex justify-between items-center w-full">
-            <span>{{ it }}</span>
-            <button
-              hx-delete="/todos/{{ it.id }}/"
-              class="bg-red-500 text-white px-2 py-1 rounded"
-              hx-swap="outerHTML"
-              hx-target="#item-{{ it.id }}"
-            >
-              Delete
-          </button>
-        </div>
-      </li>
+      {% include 'todo/todo_item.html' with it=it %}
     {% endfor %}
     <li class="flex items-center border-b border-gray-200 py-2" id="new-item-form">
       <form method="POST" id="create-todo-form" class="flex w-full" hx-post="/todos/" hx-swap="beforebegin" hx-target="#new-item-form"
